[package]
name = "pyro_caml"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.49", features = ["derive", "env"] }
clap-verbosity-flag = "3.0.4"
ctrlc = "3.5.0"
log = "0.4.28"
nix = "0.30.1"
ocaml = "1.2.1"
pretty_env_logger = "0.5.0"
pyroscope = "0.5.8"
tempdir = "0.3.7"

[build-dependencies]
ocaml-build = { version = "1.0.0", features = ["dune"] }
